# indexfs

./: Makefile.am  README  README.md  configure.ac  index.fs
scripts/: mkindexfs
src/: .gitignore  Makefile  Makefile.am  indexfs.c
